2008-01-23  Maurice van der Pot  <griffon26@kfk4ever.com>

	* data/stylesheets/msp2planner.xsl: Now using OutlineNumber instead of WBS
	when importing MS project XML, fixing bug #373008.

2008-01-13  Maurice van der Pot  <griffon26@kfk4ever.com>

	* data/stylesheets/html1_tasks.xsl: fix calculation of task costs in
	exported HTML for tasks worked on by multiple people (bug #499090).

2007-12-09  Maurice van der Pot  <griffon26@kfk4ever.com>

	* configure.in: don't fail on make install if update-mime-database or
	update-desktop-database weren't found.
	* src/planner-sql-plugin.c: (check_database_tables): call g_object_unref
	instead of g_free on results from sql_execute_query. Should fix bug #397132.

2007-07-28  Kurt Maute  <kurt@maute.us>
	Patch to correct week number by Maurice van der Pot <griffon26@kfk4ever.com>
	*libplanner/mrp-time.c
	*libplanner/mrp-time.h
	*src/planner-scale-utils.c
	*data/stylesheets/html1_gantt.xsl
	Patch to use po/LINGUAS file by Gilles Dartiguelongue:
	*configure.in
	*autogen.sh
	*po/LINGUAS

2007-07-28  Kurt Maute  <kurt@maute.us>
	Two patches from Maurice van der Pot:
	* src/planner-task-tree.c - disable selection updates before manipulating
	tasks (works for single selection, but not multiple - bug 436263)
	* src/planner-gantt-row.c - fix resource name redraw in gantt chart when
	dragging relation arrow over it
	* MAINTAINERS - added Maurice
	* AUTHORS - added Maurice

2007-07-15  Kurt Maute  <kurt@maute.us>
	The following update provided by Maurice van der Pot <griffon26@kfk4ever.com>
	* src/planner-gantt-row.c  - allow dragging the completion bar in the
	gantt chart
	Clean up some of the indenting in the .xsl files:
	* data/dtd/mrproject-0.6.dtd
	* data/stylesheets/html1_tasks.xsl
	* data/stylesheets/html1_css.xsl
	* data/stylesheets/html1_resources.xsl
	* data/stylesheets/msp2planner.xsl
	* data/stylesheets/html1_gantt.xsl
	* data/stylesheets/planner2html.xsl

2007-07-02  Kurt Maute	<kurt@maute.us>