@@ -3,11 +3,12 @@ stylesheetdir = $(datadir)/planner/stylesheets
 stylesheet_DATA = \
 	planner2html.xsl		\
 	html1_css.xsl			\
-	html1_css_ie.xsl			\
-        html1_gantt.xsl			\
-        html1_resources.xsl		\
-        html1_tasks.xsl			\
+	html1_css_ie.xsl		\
+	html1_gantt.xsl			\
+	html1_resources.xsl		\
+	html1_tasks.xsl			\
 	planner2plannerv011.xsl		\
-	msp2planner.xsl
+	msp2planner.xsl			\
+	localizable.xml
 
 EXTRA_DIST = $(stylesheet_DATA)
